@@ -927,14 +927,15 @@ This is the legend.
 This paragraph might flow around the figure...
 
 A centered figure:
-\begin{figure}[htbp]\begin{center}
+\begin{figure}[htbp]
+\centering
 
 \includegraphics[width=50]{../../../docs/user/rst/images/biohazard.png}
 \caption{This is the caption.}{\small 
 This is the legend.
 
 The legend may consist of several paragraphs.
-}\end{center}\end{figure}
+}\end{figure}
 
 This paragraph might flow around the figure...
 
